# hmc-torch

./: .gitignore  .pre-commit-config.yaml  Makefile  Makefile.bat  Makefile.ps1  Parser.py  README.md  config.yaml  converter.py  copy-result.sh  datasets_params-F33.yaml  deploy_kaggle.sh  deploy_kaggle_simple.sh  deploy_local.sh  executer-predict.py  executer.py  install.sh  pyproject.toml  pyrightconfig.json  run.ps1  run.sh  setup.cfg  sonar-project.properties  train.sh
.agents/skills/docstring/: SKILL.md
.agents/skills/gitmessage/: SKILL.md
.github/workflows/: python-publish.yml
model/: config.json
notebooks/: Dataset-GOFUN.ipynb  Executer-model.ipynb  Executer.ipynb  Labels-GO.ipynb  Parser.ipynb  convert_hpo_json.ipynb  convert_result_csv.ipynb  datasets_params.yaml
notebooks/fma/: Dataset-FMA.ipynb  Inference.ipynb
notebooks/gofun/: Dataset-GOFUN.ipynb  Load-data-to-vectordb.ipynb  Parser.ipynb  Train-GOFUN.ipynb  convert_result_csv.ipynb  extract_embeddings.ipynb
notebooks/gofun/hiclass/: hi_GOFUN.ipynb  hi_class_sample.ipynb
results/train/global-seq_FUN/test_20260401_234024/: test-scores.json
results/train/global-seq_FUN/test_20260401_234136/: test-scores.json
results/train/global-seq_FUN/test_20260401_234249/: test-scores.json
scripts/: complete_parser.py  convert_hpo_json.py  converter.py
scripts/sample/: sample_predict.py
src/hmc/: arguments.py  env.py  main.py
src/hmc/dataset/datasets/gofun/: __init__.py  dataset_arff.py  dataset_csv.py
src/hmc/dataset/manager/: dataset_manager.py
src/hmc/datasets/: dataset_torch.py
src/hmc/datasets/datasets/: dataset_torch.py
src/hmc/datasets/datasets/gofun/: __init__.py  dataset_arff.py  dataset_csv.py
src/hmc/datasets/gofun/: dataset_arff.py
src/hmc/datasets/manager/: dataset_manager.py
src/hmc/main/: losses.py
src/hmc/main/local_classifier/: main.py
src/hmc/main/local_classifier/hpo/: hpo_local.py
src/hmc/model/local_classifier/baseline/: model.py
src/hmc/model/local_classifier/constrained/: model.py
src/hmc/models/: base.py
src/hmc/models/global_classifier/baseline/: model.py
src/hmc/models/global_classifier/constrained/: model.py
src/hmc/models/global_classifier/constraint/: model.py  utils.py
src/hmc/models/local_classifier/: baseline.py  constraint.py  model.py  networks.py
src/hmc/models/local_classifier/baseline/: model.py
src/hmc/models/local_classifier/baseline_old/: model.py
src/hmc/models/local_classifier/constrained/: model.py  utils.py
src/hmc/models/local_classifier/constrained_old/: model.py
src/hmc/models/local_classifier/hat/: model.py
src/hmc/models/local_classifier/tabat/: model.py
src/hmc/models/local_classifier/utils/: losses.py
src/hmc/pipeline/global_classifier/: main.py
src/hmc/pipeline/global_classifier/baseline/: run.py
src/hmc/pipeline/global_classifier/constraint/: run.py
src/hmc/pipeline/global_classifier/core/: train.py  train_LM.py  train_lm.py
src/hmc/pipeline/local_classifier/: main.py
src/hmc/pipeline/local_classifier/core/: test.py  train.py  valid.py  validate.py
src/hmc/train/: __init__.py  hpo.py  main.py  train.py  utils.py
src/hmc/trainers/: losses.py  main.py  train.py  train_old.py  utils.py
src/hmc/trainers/local_classifier/: main.py  run.py
src/hmc/utils/: early_stopping.py  job.py  labels.py  metrics.py  output.py  parser.py
src/hmc/utils/dataset/: convert_hpo_json.py  labels.py
src/hmc/utils/metrics/: calculate_metrics.py
src/hmc/utils/path/: dir.py  files.py  output.py
src/hmc/utils/predict/: metrics.py
src/hmc/utils/train/: early_stopping.py  job.py  losses.py
tests/: conftest.py  train_global_test.py
(+49 files in other folders)
