[tool.poetry]
name = "hmc"
version = "0.0.8"
description = "Hierarchical Multi-Label Classification Network in Pytorch"
authors = ["sette <bruno.sette@ufscar.br>"]
packages = [{ include = "hmc", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tqdm = ">=4.66.4"
numpy = "^2.3.3"
torch = { version = "2.8.0", source = "pytorch-gpu" }
torchaudio = { version = "2.8.0", source = "pytorch-gpu" }
torchvision = { version = "0.23.0", source = "pytorch-gpu" }
pandas = ">=1.5.0"
dataset = ">=1.6.2"
scikit-learn = ">=1.2.2"
lightning = {extras = ["extra"], version = ">=2.0.9"}
tensorflow = ">=2.12.0"
litmodels = "^0.1.7"
optuna = "^4.3.0"
logging = "^0.4.9.6"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
flake8 = "^7.2.0"
black = "^25.1.0"
pylama = "^8.4.1"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pylint = "^3.3.7"
jupyterlab = "^4.4.6"