[tool.poetry]
name = "hmc"
version = "0.0.7"
description = "Hierarchical Multi-Label Classification Network in Pytorch"
authors = ["sette <brunosilvasette@gmail.com>"]
packages = [{ include = "hmc", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "4.67.3"
numpy = "2.4.3"
torch = { version = "2.10.0", source = "pytorch" }
torchaudio = { version = "2.10.0", source = "pytorch" }
torchvision = { version = "0.25.0", source = "pytorch" }
pandas = "3.0.1"
dataset = "1.6.2"
scikit-learn = "1.8.0"
lightning = {extras = ["extra"], version = "2.6.1"}
tensorflow = "2.21.0"
tf-keras = "2.21.0"
litmodels = "0.1.8"
optuna = "4.8.0"
logging = "0.4.9.6"
torch-geometric = "2.7.0"
transformers = "5.3.0"



[tool.poetry.group.dev.dependencies]
autopep8 = "2.3.2"
flake8 = "7.2.0"
black = "25.1.0"
pylama = "8.4.1"
isort = "6.0.1"
pre-commit = "4.2.0"
pylint = "3.3.7"
pytest = "9.0.2"
jupyterlab = "4.5.3"
jq = "1.11.0"
yq = "3.4.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

